# discord-api-morshu

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/tts_api/: config.py  main.py  models.py
src/tts_api/morshutalk/: __init__.py  g2p.py  morshu.py
tests/: test_endpoints.py
